Initial commit First version 1.0.0 on Friday, 8.oct.2021 New Icon

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -16,7 +16,7 @@
   "alphabetical_index" : "Alphabetischer Index",
   "back_alpha" : "Zurück zum Alphabetischen Index",
   "back_menu" : "Zurück zu den Menüpunkten",
-  "share_text_android": "Dieses Wörterbuch ist sehr gut \n Schauen Sie es sich an: \n https://play.google.com/store/apps/details?id=com.aplanetbit.dictionary.insurance",
+  "share_text_android": "Dieses Wörterbuch ist sehr gut \n Schauen Sie es sich an: \n https://play.google.com/store/apps/details?id=com.aplanetbit.pro.dictionary.insurance",
   "share_text_ios" : "Dieses Wörterbuch ist sehr gut \n Schauen Sie es sich an:  \n https://apps.apple.com/us/app/dictionary-of-insurance/id1545741185",
   "share_subject" : "Sehr gutes Wörterbuch",
   "say_button" : "Sag es!",
