--- a/assets/translations/it-IT.json
+++ b/assets/translations/it-IT.json
@@ -16,7 +16,7 @@
   "alphabetical_index" : "Torna all'Indice Alfabetico",
   "back_alpha" : "Torna all'Indice Alfabetico",
   "back_menu" : "Torna alle voci di Menu",
-  "share_text_android": "Questo dizionario è molto buono \n Date un'occhiata: \n https://play.google.com/store/apps/details?id=com.aplanetbit.dictionary.insurance",
+  "share_text_android": "Questo dizionario è molto buono \n Date un'occhiata: \n https://play.google.com/store/apps/details?id=com.aplanetbit.pro.dictionary.insurance",
   "share_text_ios" : "Questo dizionario è molto buono \n Date un'occhiata: \n https://apps.apple.com/us/app/dictionary-of-insurance/id1545741185",
   "share_subject" : "Un dizionario molto buono",
   "say_button" : "Dillo!",
