--- a/android/app/src/main/res/values-de/strings.xml
+++ b/android/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Wörterbuch der Versicherung</string>
+    <string name="app_name">Wörterbuch der Versicherung PRO</string>
 </resources>
