--- a/android/app/src/main/res/values-fr/strings.xml
+++ b/android/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Dictionnaire des Assurances</string>
+    <string name="app_name">Dictionnaire des Assurances PRO</string>
 </resources>
