--- a/android/app/src/main/res/values-it/strings.xml
+++ b/android/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Dizionario di Assicurazioni</string>
+    <string name="app_name">Dizionario di Assicurazioni PRO</string>
 </resources>
