--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -16,7 +16,7 @@
   "alphabetical_index" : "Alphabetical Index",
   "back_alpha" : "Back to Alphabetical Index",
   "back_menu" : "Back to Menu Items",
-  "share_text_android": "This dictionary is very good \n Have a look at it: \n https://play.google.com/store/apps/details?id=com.aplanetbit.dictionary.insurance",
+  "share_text_android": "This dictionary is very good \n Have a look at it: \n https://play.google.com/store/apps/details?id=com.aplanetbit.pro.dictionary.insurance",
   "share_text_ios" : "This dictionary is very good \n Have a look at it: \n https://apps.apple.com/us/app/dictionary-of-insurance/id1545741185",
   "share_subject" : "Very good dictionary",
   "say_button" : "Say it!",
