--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -16,7 +16,7 @@
   "alphabetical_index" : "Índice alfabético",
   "back_alpha" : "Volver al índice alfabético",
   "back_menu" : "Volver al menú principal",
-  "share_text_android": "Este diccionario es muy bueno \n Échale un vistazo: \n https://play.google.com/store/apps/details?id=com.aplanetbit.dictionary.insurance",
+  "share_text_android": "Este diccionario es muy bueno \n Échale un vistazo: \n https://play.google.com/store/apps/details?id=com.aplanetbit.pro.dictionary.insurance",
   "share_text_ios" : "Este diccionario es muy bueno \n Échale un vistazo: \n https://apps.apple.com/us/app/dictionary-of-insurance/id1545741185",
   "share_subject" : "Un muy buen diccionario",
   "say_button" : "¡Dilo!",
