--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -16,7 +16,7 @@
   "alphabetical_index" : "Index alphabétique",
   "back_alpha" : "Retour à l'index alphabétique",
   "back_menu" : "Retour au menu principal",
-  "share_text_android": "Ce dictionnaire est très bon \n Jetez-y un coup d'œil : \n https://play.google.com/store/apps/details?id=com.aplanetbit.dictionary.insurance",
+  "share_text_android": "Ce dictionnaire est très bon \n Jetez-y un coup d'œil : \n https://play.google.com/store/apps/details?id=com.aplanetbit.pro.dictionary.insurance",
   "share_text_ios" : "Ce dictionnaire est très bon \n Jetez-y un coup d'œil : \n https://apps.apple.com/us/app/dictionary-of-insurance/id1545741185",
   "share_subject" : "Un excellent dictionnaire",
   "say_button" : "Dites-le !",
