Initial commit First version 1.0.0 on Friday, 8.oct.2021 New Icon Corrected strings

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -1,5 +1,5 @@
 {
-  "title" : "Wörterbuch der Versicherungsbegriffe",
+  "title" : "Wörterbuch der Versicherungsbegriffe PRO",
   "other_apps" : "Andere Apps",
   "about" : "Über",
   "version" : "\n Version: ",
