--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,5 +1,5 @@
 {
-  "title" : "Dictionary of Insurance Terms",
+  "title" : "Dictionary of Insurance Terms PRO",
   "other_apps" : "Other Apps",
   "about" : "About",
   "version" : "\n Version: ",
