--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -1,5 +1,5 @@
 {
-  "title" : "Diccionario de Seguros",
+  "title" : "Diccionario de Seguros PRO",
   "other_apps" : "Otras Aplicaciones",
   "about" : "Acerca de",
   "version" : "\n Versión: ",
