--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -1,5 +1,5 @@
 {
-  "title" : "Dictionnaire des assurances",
+  "title" : "Dictionnaire des assurances PRO",
   "other_apps" : "Autres applications",
   "about" : "À propos de",
   "version" : "\n Version: ",
