--- a/assets/translations/it-IT.json
+++ b/assets/translations/it-IT.json
@@ -1,5 +1,5 @@
 {
-  "title" : "Dizionario di Assicurazioni",
+  "title" : "Dizionario di Assicurazioni PRO",
   "other_apps" : "Altri Applicazioni",
   "about" : "Informazioni su",
   "version" : "\n Versione: ",
